# SystemDescent

./: .gitignore  .gitmodules  MANIFEST.in  README.md  flake.nix  lyapunov.tf  requirements.txt  setup.cfg  shell.nix  shell2.nix
dynamics_learning/: KerasPendulum.py  learn_dynamics.py  learn_dynamics_tf.py  test.py
dynamics_learning/KerasPendulumDir/: KerasPendulum_bak.py
lyapunov/: saved_model.pb
lyapunov/variables/: variables.data-00000-of-00001  variables.index
sd/: GAN_dynamics_learning.py  dfl.py  dynamics_learning.py  learn_dynamics.py  lyapunov.py  test.py  utils.py
sd/envs/: __init__.py  modelable_env.py
sd/envs/Acrobot_continuous/: Acrobot_continuous.py  ModeledAcrobot_continuous.py
sd/envs/ModeledPendulumDir/: ModeledPendulum.py
sd/envs/Pendulum/: ModeledPendulum.py  Pendulum.py  PendulumKerasModel.py
sd/envs/amazingball/: BallKerasModel.py  ModeledAmazingBall.py  abs_utils.py  constant.py  data_env.py  env.py  pid.py  test.py
sd/envs/bipedal_walker/: bipedal_walker.py  modeled_bipedal_walker.py
sd/envs/box2d_test/: box2d_test.py
sd/envs/drone/: attitude_ctrl_env.py  modeled_attitude_ctrl_env.py  signals.py  test_pybullet_drone.py
sd/envs/drone/assets/: cf2x.urdf  (+2 more)
sd/rl/: ppo.py  sac.py  utils.py
sd/rl/log_utils/: logx.py  mpi_tf.py  run_utils.py
src/: GAN_dynamics_learning.py  README.md  custom_learn_dynamics.py  learn_dynamics.py  lyapunov.py  test.py  test_pybullet_drone.py  utils.py  waldo_learn_dynamics.py
src/dynamics_learning/: KerasPendulum.py  learn_dynamics.py  lyapunov.py
src/system_descent/: system_descent.py
(+28 files in other folders)
