[metadata]
name = SystemDescent
version = 0.0.1
author = Bassel El Mabsout
author_email = bmabsout@bu.edu
description = Learning Certified Control
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bmabsout/SystemDescent
project_urls =
    Bug Tracker = https://github.com/bmabsout/SystemDescent/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
